# octopush

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  index.html  package-lock.json  package.json  vite.config.ts
docs/: FEATURES.md  design-system.md  gtm-legitimacy.md  octopush-mcp.md
docs/premium/: accounts-and-subscriptions-implementation-plan.md  premium-features-plan.md  pro-real-implementation-plan.md  pro-real-part-b-history-sync.md
docs/superpowers/: 2026-06-07-review-mode-audit.md
docs/superpowers/plans/: 2026-04-11-evolution-superset-model.md  2026-05-16-phase-1-foundations.md  2026-05-17-mini-phase-3-mode-polish.md  (+66 more)
scripts/: release.mjs
scripts/screenshots/: README.md  capture.cjs
src/: App.tsx  styles.css  test-setup.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: agent_adapter.rs  auth.rs  billing.rs  chat_engine.rs  commands.rs  context_guard.rs  db.rs  entitlement.rs  error.rs  git_lock.rs  git_ops.rs  github.rs  lib.rs  main.rs  mission.rs  perf.rs  provider_router.rs  pty_client.rs  pty_daemon.rs  pty_manager.rs  routines.rs  session.rs  settings.rs  state.rs  sync.rs  talk_shell.rs  tests.rs  theme.rs  token_engine.rs  workspace.rs
src-tauri/src/issue_tracker/: jira.rs  mod.rs
src-tauri/src/mcp/: mod.rs
src-tauri/src/orchestrator/: agentic.rs  bridge.rs  cli_runner.rs  cost.rs  events.rs  git_baseline.rs  launch.rs  live.rs  mod.rs  persist.rs  roles.rs  runner.rs  sandbox.rs  types.rs  worker.rs
src-tauri/src/providers/: anthropic.rs  mod.rs  openai_compat.rs  tests.rs
src-tauri/src/skills/: mod.rs
src/components/: ActiveTicketPanel.test.tsx  ActiveTicketPanel.tsx  AppTopBar.tsx  ArchivedWorkspacesModal.tsx  BacklogPanel.test.tsx  BacklogPanel.tsx  BacklogRowContextMenu.test.tsx  BacklogRowContextMenu.tsx  BaseBranchPicker.test.tsx  BaseBranchPicker.tsx  BriefModal.tsx  CanvasSplit.full-integration.test.tsx  CanvasSplit.integration.test.tsx  CanvasSplit.tsx  ChangesPanel.test.tsx  ChangesPanel.tsx  ChatMessage.tsx  ChatView.test.tsx  ChatView.tsx  CheckpointBar.test.tsx  CheckpointBar.tsx  CommandPalette.editor.test.tsx  CommandPalette.tsx  Companion.test.tsx  Companion.tsx  CompanionContext.test.tsx  CompanionContext.tsx  CompanionCurrentRun.test.tsx  CompanionCurrentRun.tsx  CompanionFileTree.test.tsx  CompanionFileTree.tsx  CompanionHistory.test.tsx  CompanionHistory.tsx  CompanionReview.test.tsx  CompanionReview.tsx  CompanionRuns.test.tsx  CompanionRuns.tsx  CompanionTerminals.test.tsx  CompanionTerminals.tsx  ConfirmDialog.test.tsx  (+137 more)
src/hooks/: useAuth.ts  useCopyFeedback.ts  useEntitlement.ts  useMascotState.test.ts  useMascotState.ts  useReducedMotion.ts
src/lib/: aiConflict.test.ts  aiConflict.ts  aiReview.test.ts  aiReview.ts  attachments.test.ts  attachments.ts  awaitPro.test.ts  awaitPro.ts  beacon.test.ts  beacon.ts  budgetError.test.ts  budgetError.ts  chatTitle.ts  clipboard.test.ts  clipboard.ts  commitMessage.test.ts  commitMessage.ts  cost.ts  crewNotifications.test.ts  crewNotifications.ts  detectIssueKey.test.ts  detectIssueKey.ts  diffHighlight.test.ts  diffHighlight.ts  diffJump.test.ts  diffJump.ts  diffLineStyle.ts  diffParser.test.ts  diffParser.ts  duration.test.ts  duration.ts  editorLang.test.ts  editorLang.ts  exportConversation.test.ts  exportConversation.ts  fileIcons.test.ts  fileIcons.ts  focus.ts  formatBytes.test.ts  formatBytes.ts  (+54 more)
src/stores/: aiReviewStore.test.ts  aiReviewStore.ts  attentionStore.ts  authStore.test.ts  authStore.ts  blameStore.test.ts  blameStore.ts  budgetsStore.test.ts  budgetsStore.ts  chatStore.test.ts  chatStore.ts  companionPrefsStore.test.ts  companionPrefsStore.ts  editorStore.test.ts  editorStore.ts  entitlementStore.test.ts  entitlementStore.ts  firstRunStore.test.ts  firstRunStore.ts  historyStore.test.ts  historyStore.ts  issuesStore.test.ts  issuesStore.ts  missionsStore.test.ts  missionsStore.ts  notifyPrefsStore.ts  parentIssuesStore.test.ts  parentIssuesStore.ts  pipelineStore.test.ts  pipelineStore.ts  projectStore.test.ts  projectStore.ts  reviewPrefsStore.test.ts  reviewPrefsStore.ts  rolesStore.ts  routinesStore.test.ts  routinesStore.ts  runsStore.test.ts  runsStore.ts  scratchpadStore.buffer.test.ts  (+14 more)
(+136 files in other folders)
