[package]
name = "octopus-sh"
version = "0.1.0"
description = "The IDE for Agentic Developers"
authors = ["Octopus sh contributors"]
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "octopus_sh_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api", "devtools"] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
portable-pty = "0.8"
rusqlite = { version = "0.32", features = ["bundled"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
dirs = "5"
anyhow = "1"
git2 = { version = "0.19", features = ["vendored-openssl", "vendored-libgit2"] }
thiserror = "1"
parking_lot = "0.12"
bytes = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
futures-util = "0.3"
async-trait = "0.1"
tempfile = "3"
regex = "1"

[dev-dependencies]

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
